# Backend

./: .bash_history  .env.example  .gitignore  .python_history  README.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: codecheck.yaml  deploy_develop.yaml
backend/: manage.py
backend/accounts/: admin.py  constants.py  models.py  permissions.py  service.py  urls.py
backend/accounts/migrations/: 0001_initial.py  0002_alter_user_role.py  0003_magiclinktoken.py  0004_alter_user_email_alter_user_first_name_and_more.py
backend/accounts/serializers/: magic_link.py  token_obtain.py
backend/accounts/views/: magic_link.py  token_obtain.py
backend/core/: constants.py  exceptions.py  models.py  storage.py
backend/employeebook/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
backend/employees/: admin.py  constants.py  models.py  services.py  urls.py
backend/employees/migrations/: 0001_initial.py  0002_employee_photo_employee_photo_thumb.py
backend/employees/serializers/: __init__.py  employee.py  media.py
backend/employees/views/: __init__.py  employee.py  media.py
backend/medias/: serializers.py  validators.py
backend/notifications/: tasks.py
backend/structure/: admin.py  models.py  serializers.py  urls.py  views.py
backend/structure/migrations/: 0001_initial.py
backend/tags/: admin.py  models.py  serializers.py  services.py  urls.py  validators.py  views.py
backend/tags/migrations/: 0001_initial.py  0002_employeetag.py  0003_alter_employeetag_managers_and_more.py
backend/tests/: conftest.py  test_auth_jwt.py  test_celery.py  test_endpoints.py  test_permissions.py  test_photo_upload.py
backend/tests/employees/: test_endponts.py  test_model.py  test_services.py
docker/: deploy_dev_server.sh  docker-compose.server.yml
docker/caddy/: Caddyfile  ci.sh
docker/django/: Dockerfile  ci.sh  gunicorn.sh  gunicorn_config.py
